integrated chitti AI assistant successfully